# python

./: .gitignore  README.md  flake.nix  pyproject.toml
firewall-manager/: __main__.py
log-processor/: __main__.py  schema.sql
log-reader/: __main__.py
